# BoidsSimulator

./: CMakeLists.txt  LICENSE  README.md
include/: MainWidget.h  QSFMLCanvas.h
include/core/: Boid.h  Flock.h
src/: MainWidget.cpp  QSFMLCanvas.cpp  main.cpp
src/core/: Boid.cpp  Flock.cpp
